--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^12.1.2",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^2.0.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.7",
@@ -25,6 +34,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "jest-styled-components": "^7.0.8",
+    "react-test-renderer": "^17.0.2"
   }
 }
